[package]
name = "bluez-async"
version = "0.8.0"
authors = [
  "Andrew Walbran <qwandor@google.com>",
  "David Laban <alsuren@gmail.com>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An async wrapper around the D-Bus interface of BlueZ (the Linux Bluetooth daemon), supporting GATT client (central) functionality."
repository = "https://github.com/bluez-rs/bluez-async/"
keywords = ["ble", "bluetooth", "bluez"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]

[dependencies]
bitflags = "2.8.0"
bluez-generated = { version = "0.4.0", path = "../bluez-generated" }
dbus = { version = "0.9.7", features = ["futures"] }
dbus-tokio = "0.7.6"
futures = "0.3.31"
itertools = "0.14.0"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde-xml-rs = "0.6.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt"] }
uuid = "1.12.0"

[dev-dependencies]
eyre = "0.6.12"
pretty_env_logger = "0.5.0"
tokio = { version = "1.43.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }
