[package]
name = "bluez-async"
version = "0.8.2"
authors = [
  "Andrew Walbran <qwandor@google.com>",
  "David Laban <alsuren@gmail.com>",
]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An async wrapper around the D-Bus interface of BlueZ (the Linux Bluetooth daemon), supporting GATT client (central) functionality."
repository = "https://github.com/bluez-rs/bluez-async/"
keywords = ["ble", "bluetooth", "bluez"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]

[dependencies]
bitflags = "2.11.0"
bluez-generated = { version = "0.4.0", path = "../bluez-generated" }
dbus = { version = "0.9.10", features = ["futures"] }
dbus-tokio = "0.7.6"
futures = "0.3.32"
itertools = "0.14.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt"] }
uuid = "1.16.0"

[dev-dependencies]
eyre = "0.6.12"
pretty_env_logger = "0.5.0"
tokio = { version = "1.49.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }
