[package]
name = "bluez-generated"
version = "0.2.1"
authors = ["Andrew Walbran <qwandor@google.com>", "David Laban <alsuren@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Generated async D-Bus bindings for talking to BlueZ on Linux."
repository = "https://github.com/bluez-rs/bluez-async/"
keywords = ["bluetooth", "ble", "bluez", "dbus"]
categories = ["api-bindings", "os::linux-apis"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
dbus = { version = "0.9.5", features = ["futures"] }
